--- a/sensors/template/cx_sensors.yaml
+++ b/sensors/template/cx_sensors.yaml
@@ -333,3 +333,16 @@
       state: >-
         {% set kw_power = states('sensor.heat_pump_thermal_power_kw') | float(0) %}
         {{ (kw_power * 3412.14) | round(0) }}      
+
+- binary_sensor:
+
+    - name: "CX C34 C4 Water pump"
+      unique_id: cx_c34_water_pump
+      state: >
+        {% set x = states('sensor.cx50_c34') | int %}
+        {% if x |int(0) == 1 %}
+          On
+        {% else %}
+          Off
+        {% endif %}
+
